--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,52 @@
   margin: 0;
   padding: 0;
 }
+
+/* ranglar almashinuvi uchun berilgan stillar */
+
+:root {
+  --text: #fffffff2;
+  --bg: #1A1A1A;
+  --bg-cont: #000000;
+  --border: #363636;
+  --text-cont: #cac7c7bf;
+  --glass-bg: #000000BF;
+  --border-cont:#333333;
+  --text-cont1: #FFFFFF80;
+  --text1: #000000F2;
+  --text2: #E9033A;
+  --bg-del: #0D0D0D;
+}
+
+[data-theme="dark"] {
+  --text: #000000F2;
+  --text1: #FFFFFFF2;
+  --bg: #F8FAFC;
+  --bg-cont: white;
+  --border: #F0F0F0;
+  --text-cont: #423e3ebf;
+  --glass-bg: #000000BF;
+  --border-cont: #CECECE;
+  --text-cont1: #00000080;
+  --text2: #E9033A;
+  --bg-del:#fdfbfb;
+
+}
+
+
+body {
+  font-family: cursive;
+  width: 100%;
+  height: 100vh;
+  background-color: var(--bg-cont);
+  color: var(--text);
+  font-family: 'Inter', sans-serif;
+}
+
+
+
+
+
+
+
+
