--- a/src/styles/Sidebar.css
+++ b/src/styles/Sidebar.css
@@ -9,3 +9,17 @@
     border-radius: 0.4rem;
 
 }
+
+.menus {
+    padding-top: 1.5rem;
+    color: white;
+}
+
+.menu {
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    gap: 0.5rem;
+    font-size: 20px;
+    padding: 0.4rem;
+}
