--- a/src/styles/Sidebar.css
+++ b/src/styles/Sidebar.css
@@ -7,12 +7,13 @@
     padding: 1rem;
     top: 1%;
     border-radius: 0.4rem;
+    color: var(text);
 
 }
 
 .menus {
     padding-top: 1.5rem;
-    color: white;
+    
 }
 
 .menu {
