--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -1,6 +1,6 @@
 .navbar{
     position: fixed;
-    width: 83.5%;
+    width: 84%;
     height: fit-content;
     background-color: var(--bg);
     border: 1px solid var(--border-cont);
@@ -8,8 +8,20 @@
     border-radius: 0.4rem;
     font-weight: bolder;
     display: flex;
-    align-items: center;
-    justify-content: space-between;
     top: 1%;
-    
+    left:14%; 
+    font-size: 35px;   
+}
+
+#logotip {
+    width: 50px;
+    height: 50px;
+    border-radius: 20px;
+}
+
+.word-logo{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
 }
