--- a/src/App.css
+++ b/src/App.css
@@ -63,8 +63,9 @@ section{
   z-index: 10;
   background-color: white;
   border: 1px solid;
-  top: 50px;
-  left: 70%;
+  top: 75px;
+  /* left: 70%; */
+  right: 0;
 }
 
 .about-page{
