--- a/src/styles/Sidebar.css
+++ b/src/styles/Sidebar.css
@@ -23,7 +23,8 @@
     gap: 0.5rem;
     font-size: 20px;
     padding: 0.4rem;
-    color: white;
+    text-decoration: none;
+    color: var(--text-cont);
 }
 
 .tag{
