--- a/src/App.css
+++ b/src/App.css
@@ -41,3 +41,29 @@
   padding: 32px;
 
 }
+
+.login{
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  background-color: rgba(66, 66, 66, 0.293);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.login-cont{
+  width: 30%;
+  min-height: 300px;
+  background-color: white;
+  border-radius: 16px;
+  padding: 16px;
+}
+.login-cont input{
+  width: 100%;
+  height: 25px;
+  margin-bottom: 15px;
+}
+.login-cont button{
+  width: 100%;
+  height: 30px;
+}
