responsive qo'shildi

--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -56,4 +56,55 @@
     border: 1px solid;
   }
   
+
+
+
+
+
+
+
+
+
+
+  @media (max-width: 850px) {
+
+    .navbar {
+        position: fixed;
+        width: 84%;
+        height: fit-content;
+        background-color: var(--bg);
+        border: 1px solid var(--border-cont);
+        padding: 1rem;
+        border-radius: 0.4rem;
+        font-weight: bolder;
+    
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+  }
+  
+  
+  @media (max-width:500px) {
+    .navbar {
+        position: fixed;
+        width: 84%;
+        height: fit-content;
+        background-color: var(--bg);
+        border: 1px solid var(--border-cont);
+        padding: 1rem;
+        border-radius: 0.4rem;
+        font-weight: bolder;
+    
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+    }
+    
+    
+  }
+  
   
