--- a/src/styles/Teachers.css
+++ b/src/styles/Teachers.css
@@ -14,7 +14,17 @@
     width: 400px;
     height: 300px;
     border-radius: 15px;
+    background-color: var(--bg);
     box-shadow: 0 0 25px rgba(0, 0, 0, 0.39);
+}
+
+
+.title-and-btn{
+    padding-left: 1rem;
+    padding-right: 1rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .pictures{
@@ -24,3 +34,40 @@
     border-top-right-radius: 15px;
     
 }
+
+@media (max-width:500px)  {
+    .course-list{
+        display: grid;
+        grid-template-columns: repeat(1 ,auto);
+        justify-content: center;
+        align-items: center;
+        gap: 50px;
+    } 
+}
+   
+@media (max-width:850px)  {
+    .course-list{
+        display: grid;
+        grid-template-columns: repeat(2,auto);
+        justify-content: center;
+        align-items: center;
+        gap: 50px;
+    } 
+    .course-card{
+        width: 350px;
+        height: 300px;
+        border-radius: 15px;
+        background-color: var(--bg);
+        box-shadow: 0 0 25px rgba(0, 0, 0, 0.39);
+    }
+
+    .pictures{
+        width: 350px;
+        height: 210px;
+        border-top-left-radius: 15px;
+        border-top-right-radius: 15px;
+        
+    }
+    
+}
+   
