--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -51,3 +51,47 @@ h1{
 
 }
     
+@media (max-width: 850px) {
+    .hero {
+        width: 100%;
+        height: 30vh;
+        padding: 2rem;
+        background-color: var(--bg-del);
+        border: 1px solid var(--border-cont);
+        border-radius: 0.4rem;
+        display: flex;
+        align-items: center;
+        justify-content: start;
+        gap: 200px;
+        margin-left: 10vw;
+    }
+    
+    .img-hero{
+        width: 500px;
+        height: 500px;
+        display: none;    
+    }
+}
+
+
+@media (max-width: 500px) {
+    .img-hero{
+        width: 500px;
+        height: 500px;
+        display: none;    
+    }
+    .hero {
+        width: 60vw;
+        height: 30vh;
+        /* padding: 2rem; */
+        background-color: var(--bg-del);
+        border: 1px solid var(--border-cont);
+        border-radius: 0.4rem;
+        display: flex;
+        align-items: center;
+        justify-content: start;
+        gap: 200px;
+        /* margin-left: 10vw; */
+    }
+    
+}
