--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -8,7 +8,6 @@
     border-radius: 0.4rem;
     font-weight: bolder;
     display: flex;
-    /* flex-direction: row; */
     justify-content: space-between;
     align-items: center;
     top: 1%;
@@ -25,6 +24,10 @@
     gap: 20px;
 }
 
+
+.saidbar-btn{
+    display: none;
+}
 
 
 #logotip {
@@ -67,41 +70,46 @@
   @media (max-width: 850px) {
 
     .navbar {
+        width: 85vw;
         position: fixed;
-        width: 84%;
         height: fit-content;
         background-color: var(--bg);
         border: 1px solid var(--border-cont);
         padding: 1rem;
         border-radius: 0.4rem;
         font-weight: bolder;
-    
         display: flex;
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
-    }
+        left: 90px;
 
+    }
+    .saidbar-btn{
+        display: inline;
+    }
   }
   
   
   @media (max-width:500px) {
     .navbar {
+        width: 93vw;
         position: fixed;
-        /* width: 84%; */
         height: fit-content;
         background-color: var(--bg);
         border: 1px solid var(--border-cont);
         padding: 1rem;
         border-radius: 0.4rem;
         font-weight: bolder;
-    
+        left: 0;
         display: flex;
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
     }
-    
+    .saidbar-btn{
+        display: inline;
+    }
     
   }
   
