--- a/src/styles/Teachers.css
+++ b/src/styles/Teachers.css
@@ -38,15 +38,17 @@
 }
 
 @media (max-width:850px)  {
-    .courses-card{
+    .course-list{
         display: grid;
         grid-template-columns: repeat(2,auto);
         justify-content: center;
         align-items: center;
-        gap: 50px;
+        gap: 20px;
+      margin-left:  82px;
+
     } 
     .course-card{
-        width: 350px;
+        width: 360px;
         height: 300px;
         border-radius: 0.4rem;
         background-color: var(--bg);
@@ -54,7 +56,7 @@
     }
 
     .pictures{
-        width: 350px;
+        width: 360px;
         height: 210px;
         border-top-left-radius: 0.4rem;
         border-top-right-radius: 0.4rem;               
@@ -68,11 +70,13 @@
         grid-template-columns: repeat( 1,auto);
         justify-content: center;
         align-items: center;
-        gap: 50px;
+        gap: 20px;
+      margin-left:  2px;
+
     } 
 
     .course-card{
-        width: 400px;
+        width: 477px;
         height: 300px;
         border-radius: 0.4rem;
         background-color: var(--bg);
@@ -80,7 +84,7 @@
     }
 
     .pictures{
-        width: 400px;
+        width: 477px;
         height: 210px;
         border-top-left-radius: 0.4rem;
         border-top-right-radius: 0.4rem;
