--- a/src/styles/Teachers.css
+++ b/src/styles/Teachers.css
@@ -17,9 +17,15 @@
     height: 300px;
     border-radius: 0.4rem;
     background-color: var(--bg);
+    border: 1px solid var(--border-cont);
     box-shadow: 0 0 25px rgba(0, 0, 0, 0.39);
 }
 
+
+.card-open{
+   
+    height: 500px;
+}
 
 .title-and-btn{
     padding-left: 1rem;
@@ -62,6 +68,10 @@
         border-top-right-radius: 0.4rem;               
         
     }
+    .card-open{
+   
+        height: 500px;
+    }
     
 }
 @media (max-width:500px)  {
@@ -89,6 +99,10 @@
         border-top-left-radius: 0.4rem;
         border-top-right-radius: 0.4rem;
         
+    }
+    .card-open{
+   
+        height: 500px;
     }
 }
    
