--- a/src/styles/Teachers.css
+++ b/src/styles/Teachers.css
@@ -1,6 +1,6 @@
-.course-list{
+.course-list {
     display: grid;
-    grid-template-columns: repeat(3 ,auto);
+    grid-template-columns: repeat(3, auto);
     justify-content: center;
     align-items: center;
     gap: 50px;
@@ -10,24 +10,40 @@
 
 
 
+.course-card {
+    border: 1px solid;
+    width: 400px;
+    height: 300px;
+    position: relative;
+    z-index: 0;
+    padding: 10px;
+}
 
 
-.course-card{
+
+.course-card-cont {
     width: 400px;
     height: 300px;
     border-radius: 0.4rem;
     background-color: var(--bg);
     border: 1px solid var(--border-cont);
     box-shadow: 0 0 25px rgba(0, 0, 0, 0.39);
+    z-index: 5;
+    position: absolute;
+
 }
 
 
-.card-open{
-   
+
+.course-card:hover {
+    z-index: 20; /* pastdagi cardlardan ustun */
+  }
+
+.card-open {
     height: 500px;
 }
 
-.title-and-btn{
+.title-and-btn {
     padding-left: 1rem;
     padding-right: 1rem;
     display: flex;
@@ -35,25 +51,26 @@
     align-items: center;
 }
 
-.pictures{
+.pictures {
     width: 400px;
     height: 210px;
     border-top-left-radius: 0.4rem;
     border-top-right-radius: 0.4rem;
-    
+
 }
 
-@media (max-width:850px)  {
-    .course-list{
+@media (max-width:850px) {
+    .course-list {
         display: grid;
-        grid-template-columns: repeat(2,auto);
+        grid-template-columns: repeat(2, auto);
         justify-content: center;
         align-items: center;
         gap: 20px;
-      margin-left:  82px;
+        margin-left: 82px;
 
-    } 
-    .course-card{
+    }
+
+    .course-card-cont {
         width: 360px;
         height: 300px;
         border-radius: 0.4rem;
@@ -61,31 +78,33 @@
         box-shadow: 0 0 25px rgba(0, 0, 0, 0.39);
     }
 
-    .pictures{
+    .pictures {
         width: 360px;
         height: 210px;
         border-top-left-radius: 0.4rem;
-        border-top-right-radius: 0.4rem;               
-        
+        border-top-right-radius: 0.4rem;
+
     }
-    .card-open{
-   
+
+    .card-open {
+
         height: 500px;
     }
-    
+
 }
-@media (max-width:500px)  {
-    .course-list{
+
+@media (max-width:500px) {
+    .course-list {
         display: grid;
-        grid-template-columns: repeat( 1,auto);
+        grid-template-columns: repeat(1, auto);
         justify-content: center;
         align-items: center;
         gap: 20px;
-      margin-left:  2px;
+        margin-left: 2px;
 
-    } 
+    }
 
-    .course-card{
+    .course-card-cont {
         width: 477px;
         height: 300px;
         border-radius: 0.4rem;
@@ -93,17 +112,16 @@
         box-shadow: 0 0 25px rgba(0, 0, 0, 0.39);
     }
 
-    .pictures{
+    .pictures {
         width: 477px;
         height: 210px;
         border-top-left-radius: 0.4rem;
         border-top-right-radius: 0.4rem;
-        
+
     }
-    .card-open{
-   
+
+    .card-open {
+
         height: 500px;
     }
 }
-   
-   
