--- a/src/App.css
+++ b/src/App.css
@@ -34,13 +34,41 @@
   display: grid;
   grid-template-columns: repeat(3,auto);
   gap: 32px;
+  justify-content: center;
+  align-items: center;
 }
 .course-card{
-  background-color: aqua;
-  border-radius: 15px;
-  padding: 32px;
-
+  width: 250px;
+  height: 100px;
+  position: relative;
+  z-index: 1;
 }
+/* .course-card:hover{
+  z-index: 10;
+} */
+.card-cont{
+  border-radius: 15px;
+  width: 100%;
+  height: 100%;
+  background-color: aqua;
+  padding: 10px;
+  transition: 100ms;
+  overflow: hidden;
+}
+.card-open{
+  position: absolute;
+  height: 200px;
+  z-index: 10;
+}
+.card-cont p{
+  margin-top: 30px;
+}
+.card-cont button{
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
+
 
 .login{
   width: 100vw;
