--- a/src/App.css
+++ b/src/App.css
@@ -61,12 +61,14 @@
   z-index: 10;
 }
 .card-cont p{
-  margin-top: 30px;
+  margin-top: 40px;
 }
 .card-cont button{
   position: absolute;
   bottom: 0;
   right: 0;
+  border: none;
+  background: none;
 }
 
 
