--- a/src/styles/Teachers.css
+++ b/src/styles/Teachers.css
@@ -30,13 +30,13 @@
     box-shadow: 0 0 25px rgba(0, 0, 0, 0.39);
     z-index: 5;
     position: absolute;
-
+    overflow: hidden;
 }
 
 
 
 .course-card:hover {
-    z-index: 20; /* pastdagi cardlardan ustun */
+    z-index: 20; 
   }
 
 .card-open {
