--- a/src/styles/Teachers.css
+++ b/src/styles/Teachers.css
@@ -1,4 +1,4 @@
-.course-list {
+ .course-list {
     display: grid;
     grid-template-columns: repeat(3, auto);
     justify-content: center;
@@ -7,9 +7,7 @@
     margin-left: 15vw;
 
 }
-
-
-
+/*  
 .course-card {
 
     width: 400px;
@@ -18,9 +16,6 @@
     z-index: 0;
     padding: 10px;
 }
-
-
-
 .cardBtn {
 
     padding: 0.5rem;
@@ -33,7 +28,6 @@
     bottom: 1rem;
     right: 1rem;
 }
-
 .cardBtn:hover {
 
     transform: scale(1.05) translateY(-5px);
@@ -43,8 +37,6 @@
     filter: brightness(1.1);
 
 }
-
-
 .dataToggle {
     width: 100%;
     padding: 0.5rem;
@@ -59,7 +51,6 @@
     transition: all 0.3s ease-in-out;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
-
 .dataToggle:hover {
     transform: translateY(-2px) scale(1.03);
     box-shadow: 
@@ -67,7 +58,6 @@
     0 0 10px rgba(142, 45, 226, 0.5);
     filter: brightness(1.1);
 }
-
 .course-card-cont {
     width: 400px;
     height: 300px;
@@ -79,16 +69,91 @@
     position: absolute;
     overflow: hidden;
 }
-
 .course-card-cont h2:first-child {
     margin-top: 10px;
 }
-
-
-
 .card-open {
     height: 800px;
+} */
+
+
+
+.card 
+{
+    position: relative;
+    width: 300px;
+    height: 400px;
+    transform-style: preserve-3d;
+    border-radius: 15px;
 }
+
+.card .face 
+{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transform-style: preserve-3d;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    backface-visibility: hidden;
+    transition: 2s ease-in-out;
+    transform: perspective(500px) rotateY(0deg);
+}
+
+.card .face.front 
+{
+    background: #ff04ff; ;
+    color: red;
+}
+
+.card .face.back{
+    background:#3bc2ff;
+    color: black;
+    transform: perspective(500px) rotateY(180deg);
+
+}
+
+.card:hover .face.front
+ {
+    transform: perspective(500px) rotateY(180deg);
+}
+
+.card:hover .face.back
+{
+    transform: perspective(500px) rotateY(360deg);
+}
+
+
+.card .face.back h2
+{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 10px;
+    text-transform: uppercase;
+    transform: perspective(500px) translateZ(50px);
+
+}
+
+.card .face h4
+{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 10px;
+    text-transform: uppercase;
+    transform: perspective(500px) translateZ(50px);
+
+}
+
+
+
+
+
+
 
 h2 {
     line-height: 2;
