--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@
   --text:white;
   --text1: #cec2c2f2;
   --text2: #E9033A;
-  --bg: #1A1A1A;
+  --bg:linear-gradient(180deg, #1e3a5f 0%, #111827 100%) ;
   --bg-cont: #000000;
   --border: #363636;
   --text-cont: #cac7c7bf;
@@ -19,13 +19,15 @@
   --border-cont:#333333;
   --text-cont1: #FFFFFF80;
   --bg-del: #0D0D0D;
+  --shadow:rgba(16, 83, 95, 0.322);
+  
 }
 
 [data-theme="dark"] {
   --text: rgb(43, 39, 39);
   --text1: #a3a0a0f2;
   --text2: #E9033A;
-  --bg: #F8FAFC;
+  --bg:linear-gradient(180deg, #F0E5EF 0%, #ffffff 100%);
   --bg-cont: white;
   --border: #F0F0F0;
   --text-cont: #423e3ebf;
@@ -33,6 +35,8 @@
   --border-cont: #CECECE;
   --text-cont1: #00000080;
   --bg-del:#fdfbfb;
+  --shadow:rgba(128, 15, 103, 0.25);
+  --card-bg:linear-gradient(180deg, #7C2AE8 0%, #B983FF 45%, #FFFFFF 100%);
 
 }
 
