--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -2,8 +2,8 @@
     position: fixed;
     width: 83vw;
     height: 3rem;
-    background: var(--bg);
-    border: 1px solid var(--border-cont);
+    background: var(--nav-said);
+
     padding: 1rem;
     border-radius: 0.4rem;
     font-weight: bolder;
@@ -14,7 +14,7 @@
     left: 14%;
     font-size: 35px;
     z-index: 1000;
-    box-shadow: 0 0px 30px var(--shadow);
+ 
 }
 
 /* Nav-btns ichidagi elementlar ham yonma-yon turishi uchun */
