--- a/src/styles/Students.css
+++ b/src/styles/Students.css
@@ -3,7 +3,7 @@
     width: 400px;
     height: 400px;
     transform-style: preserve-3d;
-    
+
 }
 
 .card .face {
@@ -17,38 +17,38 @@
     align-items: start;
     justify-content: center;
     backface-visibility: hidden;
-    transition: 2s ease-in-out;
+    transition: 1.1s ease-in-out;
     transform: perspective(500px) rotateY(0deg);
-    border-radius: 15px;
-    
+    border-radius: 0.5rem;
+
 }
 
 .card .face.front {
-    background-color: rgba(209, 120, 231, 0.281);
-    backdrop-filter: blur(1px);               
+    color: var(--card-text);
+    background: var(--nav-said);
+    backdrop-filter: blur(1px);
     -webkit-backdrop-filter: blur(1px);
-    color: white;
-    
-    
+
+
 }
 
 .card .face.back {
-    color: aqua;
+    color:var(--card-text) ;
     transform: perspective(500px) rotateY(180deg);
     text-align: start;
-    background-color: rgba(125, 46, 145, 0.281);
-    backdrop-filter: blur(1px);               
+   background: var(--nav-said);
+    backdrop-filter: blur(1px);
     -webkit-backdrop-filter: blur(1px);
-    border: 3px solid aqua;
     
-    
-    
-    
+
+
+
+
 }
 
 
 .full-info {
-    
+
     border-radius: 15px;
 
 }
@@ -58,7 +58,7 @@
 }
 
 .card:hover .face.back {
-    transform: perspective(500px) rotateY(360deg) translate3d(-30px,-50px,0);
+    transform: perspective(500px) rotateY(360deg) translate3d(-30px, -50px, 0);
 }
 
 
