--- a/src/styles/Teachers.css
+++ b/src/styles/Teachers.css
@@ -1,257 +1,226 @@
  .course-list {
-    display: grid;
-    grid-template-columns: repeat(3, auto);
-    justify-content: center;
-    align-items: center;
-    gap: 60px;
-    margin-left: 15vw;
-    margin-top: 50px;
+     display: grid;
+     grid-template-columns: repeat(3, auto);
+     justify-content: center;
+     align-items: center;
+     gap: 60px;
+     margin-left: 15vw;
+     margin-top: 50px;
 
-}
-/*   
-.course-card {
+ }
 
-    width: 400px;
-    height: 300px;
-    position: relative;
-    z-index: 0;
-    padding: 10px;
-}
-.cardBtn {
+ .dataToggle {
+     width: 100%;
+     padding: 0.5rem;
+     font-size: 20px;
+     font-weight: 500;
+     border: none;
+     border-radius: 6px;
+     color: white;
+     cursor: pointer;
+     margin-top: 10px;
+     background: linear-gradient(135deg, #8E2DE2, #4A00E0);
+     transition: all 0.3s ease-in-out;
+     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+ }
 
-    padding: 0.5rem;
-    border: none;
-    background: linear-gradient(45deg, #ff00cc, #3333ff);
-    color: white;
-    border-radius: 5px;
-    transition: 0.3s;
-    position: absolute;
-    bottom: 1rem;
-    right: 1rem;
-}
-.cardBtn:hover {
+ .dataToggle:hover {
+     transform: translateY(-2px) scale(1.03);
+     box-shadow:
+         0 5px 12px rgba(0, 0, 0, 0.15),
+         0 0 10px rgba(142, 45, 226, 0.5);
+     filter: brightness(1.1);
+ }
 
-    transform: scale(1.05) translateY(-5px);
-    box-shadow:
-    0 10px 20px rgba(0, 0, 0, 0.2),
-    0 0 20px rgba(98, 0, 234, 0.7);
-    filter: brightness(1.1);
+ width: 400px;
+ height: 300px;
+ border-radius: 0.4rem;
+ background-color: var(--bg);
+ border: 1px solid var(--border-cont);
+ box-shadow: 0 0 25px rgba(0, 0, 0, 0.39);
+ z-index: 5;
+ position: absolute;
+ overflow: hidden;
+ }
 
-} */
-.dataToggle {
-    width: 100%;
-    padding: 0.5rem;
-    font-size: 20px;
-    font-weight: 500;
-    border: none;
-    border-radius: 6px;
-    color: white;
-    cursor: pointer;
-    margin-top: 10px;
-    background: linear-gradient(135deg, #8E2DE2, #4A00E0);
-    transition: all 0.3s ease-in-out;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-}
-.dataToggle:hover {
-    transform: translateY(-2px) scale(1.03);
-    box-shadow: 
-    0 5px 12px rgba(0, 0, 0, 0.15), 
-    0 0 10px rgba(142, 45, 226, 0.5);
-    filter: brightness(1.1);
-}
-/* .course-card-cont {
-    width: 400px;
-    height: 300px;
-    border-radius: 0.4rem;
-    background-color: var(--bg);
-    border: 1px solid var(--border-cont);
-    box-shadow: 0 0 25px rgba(0, 0, 0, 0.39);
-    z-index: 5;
-    position: absolute;
-    overflow: hidden;
-}
-.course-card-cont h2:first-child {
-    margin-top: 10px;
-}
-.card-open {
-    height: 800px;
-} */ 
+ .course-card-cont h2:first-child {
+     margin-top: 10px;
+ }
+
+ .card-open {
+     height: 800px;
+ }
+
+ */ .card {
+     position: relative;
+     width: 300px;
+     height: 400px;
+     transform-style: preserve-3d;
+     border-radius: 15px;
+ }
 
 
+ /* old qismi */
+ .card .face {
+     position: absolute;
+     top: 0;
+     left: 0;
+     width: 100%;
+     height: 100%;
+     transform-style: preserve-3d;
+     display: flex;
+     align-items: center;
+     justify-content: center;
+     backface-visibility: hidden;
+     transition: 2s ease-in-out;
+     transform: perspective(500px) rotateY(0deg);
 
-.card 
-{
-    position: relative;
-    width: 300px;
-    height: 400px;
-    transform-style: preserve-3d;
-    border-radius: 15px;
-}
+ }
 
-.card .face 
-{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    transform-style: preserve-3d;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    backface-visibility: hidden;
-    transition: 2s ease-in-out;
-    transform: perspective(500px) rotateY(0deg);
-    
-}
+ .card .face.front {
+     color: rgb(22, 21, 21);
+ }
 
-.card .face.front 
-{
-    /* background:#1A1A2E; */
-    color: red;
-}
+ .card .face.back {
+     /* background:#3bc2ff; */
+     color: black;
+     transform: perspective(500px) rotateY(180deg);
+     padding: 2rem;
 
-.card .face.back{
-    /* background:#3bc2ff; */
-    color: black;
-    transform: perspective(500px) rotateY(180deg);
-    padding: 2rem;
-    
-}
+ }
 
-.card:hover .face.front
-{
-    transform: perspective(500px) rotateY(180deg);
-}
+ .card:hover .face.front {
+     transform: perspective(500px) rotateY(180deg);
+ }
 
-.card:hover .face.back
-{
-    transform: perspective(500px) rotateY(360deg);
-}
+ .card:hover .face.back {
+     transform: perspective(500px) rotateY(360deg);
+ }
 
 
-.card .face.back h2
-{
-  
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 10px;
-    text-transform: uppercase;
-    transform: perspective(500px) translateZ(50px);
+ .card .face.back h2 {
 
-}
+     display: flex;
+     align-items: center;
+     justify-content: center;
+     font-size: 10px;
+     text-transform: uppercase;
+     transform: perspective(500px) translateZ(50px);
 
-.card .face h4
-{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 10px;
-    text-transform: uppercase;
-    transform: perspective(500px) translateZ(50px);
+ }
 
-}
+ .card .face h4 {
+     display: flex;
+     align-items: center;
+     justify-content: center;
+     font-size: 10px;
+     text-transform: uppercase;
+     transform: perspective(500px) translateZ(50px);
+
+ }
 
 
-.card .face.front .teacher-info{
-    position: absolute;
-    bottom: 0;
-    text-align: center;
-}
+ .card .face.front .teacher-info {
+     position: absolute;
+     bottom: 0;
+     text-align: center;
+ }
 
 
 
 
 
 
-h2 {
-    line-height: 2;
-}
+ h2 {
+     line-height: 2;
+ }
 
 
-.data {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
+ .data {
+     display: flex;
+     align-items: center;
+     justify-content: space-between;
+ }
 
-.title-and-btn {
-    padding-left: 1rem;
-    padding-right: 1rem;
-}
+ .title-and-btn {
+     padding-left: 1rem;
+     padding-right: 1rem;
+ }
 
-.pictures {
-    width: 80%;;
-    height: 70%;
-   border-radius: 0.4rem;
-    position: fixed;
+ .pictures {
+     width: 80%;
+     height: 70%;
+     border-radius: 0.4rem;
+     position: fixed;
+     transform: perspective(500px) translateZ(50px);
 
-}
 
-@media (max-width:850px) {
-    .course-list {
-        display: grid;
-        grid-template-columns: repeat(2, auto);
-        justify-content: center;
-        align-items: center;
-        gap: 20px;
-        margin-left: 82px;
 
-    }
+ }
 
-    .course-card-cont {
-        width: 360px;
-        height: 300px;
-        border-radius: 0.4rem;
-        background-color: var(--bg);
-        box-shadow: 0 0 25px rgba(0, 0, 0, 0.39);
-    }
+ @media (max-width:850px) {
+     .course-list {
+         display: grid;
+         grid-template-columns: repeat(2, auto);
+         justify-content: center;
+         align-items: center;
+         gap: 20px;
+         margin-left: 82px;
 
-    .pictures {
-        width: 360px;
-        height: 210px;
-        border-top-left-radius: 0.4rem;
-        border-top-right-radius: 0.4rem;
+     }
 
-    }
+     .course-card-cont {
+         width: 360px;
+         height: 300px;
+         border-radius: 0.4rem;
+         background-color: var(--bg);
+         box-shadow: 0 0 25px rgba(0, 0, 0, 0.39);
+     }
 
-    .card-open {
+     .pictures {
+         width: 360px;
+         height: 210px;
+         border-top-left-radius: 0.4rem;
+         border-top-right-radius: 0.4rem;
 
-        height: 500px;
-    }
+     }
 
-}
+     .card-open {
 
-@media (max-width:500px) {
-    .course-list {
-        display: grid;
-        grid-template-columns: repeat(1, auto);
-        justify-content: center;
-        align-items: center;
-        gap: 20px;
-        margin-left: 2px;
+         height: 500px;
+     }
 
-    }
+ }
 
-    .course-card-cont {
-        width: 477px;
-        height: 300px;
-        border-radius: 0.4rem;
-        background-color: var(--bg);
-        box-shadow: 0 0 25px rgba(0, 0, 0, 0.39);
-    }
+ @media (max-width:500px) {
+     .course-list {
+         display: grid;
+         grid-template-columns: repeat(1, auto);
+         justify-content: center;
+         align-items: center;
+         gap: 20px;
+         margin-left: 2px;
 
-    .pictures {
-        width: 477px;
-        height: 210px;
-        border-top-left-radius: 0.4rem;
-        border-top-right-radius: 0.4rem;
+     }
 
-    }
+     .course-card-cont {
+         width: 477px;
+         height: 300px;
+         border-radius: 0.4rem;
+         background-color: var(--bg);
+         box-shadow: 0 0 25px rgba(0, 0, 0, 0.39);
+     }
 
-    .card-open {
+     .pictures {
+         width: 477px;
+         height: 210px;
+         border-top-left-radius: 0.4rem;
+         border-top-right-radius: 0.4rem;
 
-        height: 500px;
-    }
-}
+     }
+
+     .card-open {
+
+         height: 500px;
+     }
+ }
