--- a/src/styles/Teachers.css
+++ b/src/styles/Teachers.css
@@ -31,35 +31,25 @@
          0 0 10px rgba(142, 45, 226, 0.5);
      filter: brightness(1.1);
  }
-
- width: 400px;
- height: 300px;
- border-radius: 0.4rem;
- background-color: var(--bg);
- border: 1px solid var(--border-cont);
- box-shadow: 0 0 25px rgba(0, 0, 0, 0.39);
- z-index: 5;
- position: absolute;
- overflow: hidden;
- }
-
- .course-card-cont h2:first-child {
-     margin-top: 10px;
- }
-
- .card-open {
-     height: 800px;
- }
-
- */ .card {
+ .card {
      position: relative;
      width: 300px;
      height: 400px;
      transform-style: preserve-3d;
      border-radius: 15px;
  }
+ .card .face h4 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 10px;
+    text-transform: uppercase;
+    transform: perspective(500px) translateZ(50px);
 
-
+}
+.full-info h2 {
+    line-height: 2;
+}
  /* old qismi */
  .card .face {
      position: absolute;
@@ -81,6 +71,18 @@
      color: rgb(22, 21, 21);
  }
 
+ .card:hover .face.front {
+     transform: perspective(500px) rotateY(180deg);
+ }
+
+ .card .face.front .teacher-info {
+     position: absolute;
+     bottom: 0;
+     text-align: center;
+ }
+
+
+ /* orqa qismi */
  .card .face.back {
      /* background:#3bc2ff; */
      color: black;
@@ -89,14 +91,9 @@
 
  }
 
- .card:hover .face.front {
-     transform: perspective(500px) rotateY(180deg);
- }
-
  .card:hover .face.back {
      transform: perspective(500px) rotateY(360deg);
  }
-
 
  .card .face.back h2 {
 
@@ -109,44 +106,8 @@
 
  }
 
- .card .face h4 {
-     display: flex;
-     align-items: center;
-     justify-content: center;
-     font-size: 10px;
-     text-transform: uppercase;
-     transform: perspective(500px) translateZ(50px);
-
- }
-
-
- .card .face.front .teacher-info {
-     position: absolute;
-     bottom: 0;
-     text-align: center;
- }
-
-
-
-
-
-
- h2 {
-     line-height: 2;
- }
-
-
- .data {
-     display: flex;
-     align-items: center;
-     justify-content: space-between;
- }
-
- .title-and-btn {
-     padding-left: 1rem;
-     padding-right: 1rem;
- }
-
+ 
+/* o'qituvchilarni rasmi uchun berilgan stil */
  .pictures {
      width: 80%;
      height: 70%;
@@ -157,6 +118,25 @@
 
 
  }
+
+
+ /* kerakli ammo keraksiz */
+ /* .data {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    } */
+ /* .title-and-btn {
+    padding-left: 1rem;
+    padding-right: 1rem;
+   } */
+ /* .card-open {
+     height: 800px;
+ } */
+ /* .course-card-cont h2:first-child {
+     margin-top: 10px;
+ } */
+
 
  @media (max-width:850px) {
      .course-list {
@@ -169,13 +149,7 @@
 
      }
 
-     .course-card-cont {
-         width: 360px;
-         height: 300px;
-         border-radius: 0.4rem;
-         background-color: var(--bg);
-         box-shadow: 0 0 25px rgba(0, 0, 0, 0.39);
-     }
+
 
      .pictures {
          width: 360px;
@@ -185,10 +159,7 @@
 
      }
 
-     .card-open {
 
-         height: 500px;
-     }
 
  }
 
@@ -203,13 +174,6 @@
 
      }
 
-     .course-card-cont {
-         width: 477px;
-         height: 300px;
-         border-radius: 0.4rem;
-         background-color: var(--bg);
-         box-shadow: 0 0 25px rgba(0, 0, 0, 0.39);
-     }
 
      .pictures {
          width: 477px;
@@ -219,8 +183,5 @@
 
      }
 
-     .card-open {
 
-         height: 500px;
-     }
  }
