--- a/src/styles/Students.css
+++ b/src/styles/Students.css
@@ -74,3 +74,99 @@
     transform: perspective(500px) translateZ(50px);
 
 } */
+@media (max-width:850px) {
+
+    .course-list {
+        display: grid;
+        grid-template-columns: repeat(2, auto);
+        justify-content: center;
+        align-items: center;
+        gap: 20px;
+        /* margin-left: 2px; */
+        /* background-color: var(--nav-said); */
+
+    }
+    .card {
+        position: relative;
+        width: 340px;
+        height: 350px;
+        transform-style: preserve-3d;
+        border-radius: 15px;
+    }
+
+    .pictures {
+        width: 300px;
+        height: 260px;
+        border-top-left-radius: 0.4rem;
+        border-top-right-radius: 0.4rem;
+
+    }
+
+
+}
+
+@media (max-width:500px) {
+    .course-list {
+        display: grid;
+        grid-template-columns: repeat(1, auto);
+        justify-content: center;
+        align-items: center;
+        gap: 20px;
+        margin-left: 2px;
+        /* background-color: var(--nav-said); */
+
+    }
+
+
+
+    .card {
+        position: relative;
+        width: 500px;
+        height: 400px;
+        transform-style: preserve-3d;
+        border-radius: 15px;
+    }
+
+
+    .pictures {
+        width: 400px;
+        height: 310px;
+        border-top-left-radius: 0.4rem;
+        border-top-right-radius: 0.4rem;
+
+    }
+
+    .card .face.back h2 {
+
+        display: flex;
+        align-items: center;
+        justify-content: start;
+        font-size: 20px;
+        margin-left: 20px;
+        /* text-transform: uppercase; */
+        /* transform: perspective(500px) translateZ(50px); */
+   
+    }
+
+    .card .face h4 {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 10px;
+        margin-left: 20px;
+        text-transform: uppercase;
+        transform: perspective(500px) translateZ(50px);
+   
+    }
+
+   
+     .card .face.back {
+        color: black;
+        transform: perspective(500px) rotateY(180deg);
+        width: 400px;
+   
+   
+    }
+
+
+}
