--- a/src/styles/Teachers.css
+++ b/src/styles/Teachers.css
@@ -9,6 +9,14 @@
 
  }
 
+ .dataToggle:hover {
+     transform: translateY(-2px) scale(1.03);
+     box-shadow:
+         0 5px 12px rgba(0, 0, 0, 0.15),
+         0 0 10px rgba(142, 45, 226, 0.5);
+     filter: brightness(1.1);
+ }
+
  .dataToggle {
      width: 100%;
      padding: 0.5rem;
@@ -24,38 +32,40 @@
      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
  }
 
- .dataToggle:hover {
-     transform: translateY(-2px) scale(1.03);
-     box-shadow:
-         0 5px 12px rgba(0, 0, 0, 0.15),
-         0 0 10px rgba(142, 45, 226, 0.5);
-     filter: brightness(1.1);
- }
+
  .card {
+     width: 600px;
      position: relative;
-     width: 300px;
      height: 400px;
      transform-style: preserve-3d;
      border-radius: 15px;
  }
- .card .face h4 {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 10px;
-    text-transform: uppercase;
-    transform: perspective(500px) translateZ(50px);
 
-}
-.full-info h2 {
-    line-height: 2;
-}
+ .card .face h4 {
+     display: flex;
+     align-items: center;
+     justify-content: center;
+     font-size: 10px;
+     text-transform: uppercase;
+     transform: perspective(500px) translateZ(50px);
+
+ }
+
+ .full-info h2 {
+     line-height: 2;
+ }
+
+ .section-open .course-list {
+     width: 93%;
+     margin-left: 3%;
+ }
+
  /* old qismi */
  .card .face {
      position: absolute;
      top: 0;
      left: 0;
-     width: 100%;
+     /* width: 300px; */
      height: 100%;
      transform-style: preserve-3d;
      display: flex;
@@ -84,13 +94,6 @@
 
 
  /* orqa qismi */
- .card .face.back {
-     /* background:#3bc2ff; */
-     color: black;
-     transform: perspective(500px) rotateY(180deg);
-     padding: 2rem;
-
- }
 
  .card:hover .face.back {
      transform: perspective(500px) rotateY(360deg);
@@ -107,8 +110,15 @@
 
  }
 
- 
-/* o'qituvchilarni rasmi uchun berilgan stil */
+  .card .face.back {
+
+     color: black;
+     transform: perspective(500px) rotateY(180deg);
+     padding: 2rem;
+
+ }
+
+ /* o'qituvchilarni rasmi uchun berilgan stil */
  .pictures {
      width: 80%;
      height: 70%;
@@ -146,9 +156,22 @@
          justify-content: center;
          align-items: center;
          gap: 20px;
-         margin-left: 82px;
+         /* margin-left: 82px; */
 
      }
+     .section-open .course-list {
+        width: 93%;
+        padding-left: 2%;(!important)
+        /* margin-left: 3%; */
+    }
+
+    .card {
+        position: relative;
+        width: 430px;
+        height: 400px;
+        transform-style: preserve-3d;
+        border-radius: 15px;
+    }
 
 
 
@@ -170,27 +193,40 @@
          grid-template-columns: repeat(1, auto);
          justify-content: center;
          align-items: center;
-         gap: 20px;
+         gap: 50px;
          margin-left: 2px;
 
      }
-     
+
+
+
      .card {
-        position: relative;
-        width: 477px;
-        height: 400px;
-        transform-style: preserve-3d;
-        border-radius: 15px;
-    }
+         position: relative;
+         width: 500px;
+         height: 400px;
+         transform-style: preserve-3d;
+         border-radius: 15px;
+     }
 
 
      .pictures {
-         width: 477px;
+         width: 300px;
          height: 310px;
          border-top-left-radius: 0.4rem;
          border-top-right-radius: 0.4rem;
 
      }
+     .card .face.front .teacher-info {
+        position: absolute;
+        bottom: 0;
+        text-align: start;
+    }
 
+    .section-open .course-list {
+        width: 93%;
+        padding-left: 0;(!important)
+        /* margin-left: 3%; */
+    }
+   
 
  }
