--- a/src/styles/Teachers.css
+++ b/src/styles/Teachers.css
@@ -162,7 +162,7 @@
         width: 93%;
         padding-left: 2.5%;(!important)
     }
-
+    
     .card {
         position: relative;
         width: 430px;
@@ -170,58 +170,59 @@
         transform-style: preserve-3d;
         border-radius: 15px;
     }
-
-
-
-     .pictures {
-         width: 360px;
+    
+    
+    
+    .pictures {
+        width: 360px;
          height: 210px;
          border-top-left-radius: 0.4rem;
          border-top-right-radius: 0.4rem;
-
+         
      }
-
-
-
- }
-
- @media (max-width:500px) {
-     .course-list {
-         display: grid;
-         grid-template-columns: repeat(1, auto);
-         justify-content: center;
-         align-items: center;
-         gap: 50px;
-         margin-left: 2px;
-
-     }
-
-
-
-     .card {
+     
+     
+     
+    }
+    
+    @media (max-width:500px) {
+        .course-list {
+            display: grid;
+            grid-template-columns: repeat(1, auto);
+            justify-content: center;
+            align-items: center;
+            gap: 50px;
+            margin-left: 2px;
+            
+        }
+        
+        
+        
+        .card {
          position: relative;
          width: 500px;
          height: 400px;
          transform-style: preserve-3d;
          border-radius: 15px;
      }
-
-
+     
+     
      .pictures {
          width: 300px;
          height: 310px;
          border-top-left-radius: 0.4rem;
          border-top-right-radius: 0.4rem;
-
-     }
+         
+        }
      .card .face.front .teacher-info {
         position: absolute;
         bottom: 0;
         text-align: start;
     }
-
+    
     .section-open .course-list {
         width: 93%;
+        padding-left: 0;(!important)
     }
    
 
